--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Flask = "^2.0.2"
-tensorflow = "2.4.0"
 tensorflow-hub = "^0.12.0"
 tensorflow_text = "^2.4"
 pandas = "^1.0.0"
 sklearn = "^0.0.0"
+keras = "^2.7.0"
 
 [tool.poetry.dev-dependencies]
 
