--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ Flask = "^2.0.2"
 tensorflow = "2.4.0"
 tensorflow-hub = "^0.12.0"
 tensorflow_text = "^2.4"
-sklearn = "^0.0.0"
+scikit-learn = "1.0.2"
 
 [tool.poetry.dev-dependencies]
 
